test_cases/negative/compiler/argument_mismatch_builtin.snek
export DEFAULT = Exec("echo hello");
